# rofdo_bevy_sandbox

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.github/workflows/: test.yml
src/: cl_input.rs  main.rs  server.rs  settings.rs
